# algolabra

./: .coverage  README.md  main.py  pyproject.toml
dokumentaatio/: Käyttöohje.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti4.md
src/: game.py  markov.py  player.py  utils.py
tests/: test_game.py  test_markov.py  test_player.py  test_utils.py
